RESOLVED #10 - Family box overflowing in sidebar on small windows

--- a/src/sass/bootstrap/_pre-default.scss
+++ b/src/sass/bootstrap/_pre-default.scss
@@ -58,6 +58,7 @@ $card-cap-bg: $maj-c-theme-light;
 //$dropdown-color: theme-color();
 $dropdown-link-color: $primary;
 $dropdown-bg: $maj-c-theme-light;
+$dropdown-header-color: $primary; 
 $dropdown-link-hover-color: $primary;
 //$dropdown-link-hover-bg: $maj-c-theme-lighter;
 $dropdown-link-active-color:  $primary;
