--- a/src/sass/rural/_main.scss
+++ b/src/sass/rural/_main.scss
@@ -215,10 +215,6 @@
 		text-align: center;
 		font-weight: bold;
 		width: 20%;
-
-		#sidebar & {
-			min-width: 7rem;
-		}
 	}
 	
 	td {
